css fixes for text overflow in weblinks table in state plan data page

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -9,7 +9,7 @@
 /*
 @media (min-width: 992px) {
 	body {
-		padding-top: 56px; 
+		padding-top: 56px;
 	}
 }
 */
@@ -266,7 +266,7 @@ input[type=radio] {
 }
 /*
 form#chartSelector {
-	height: 490px; 
+	height: 490px;
 }*/
 #leftSide {
 	width: 380px;
@@ -1059,3 +1059,4 @@ th.google-visualization-table-th {background-color: #333;}
 .list-group button {
     font-family: 'Cabin Condensed', sans-serif;
 }
+#table09 .google-visualization-table-table td.google-visualization-table-td {text-overflow: ellipsis;}
